# roar

./: .gitignore  DEPLOY.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
roar/: __main__.py  config.py  glaas_client.py
roar/analyzers/: __init__.py  base.py  experiment_trackers.py
roar/cli/: __init__.py  context.py  decorators.py
roar/cli/commands/: __init__.py  _execution.py  auth.py  build.py  config.py  dag.py  env.py  init.py  lineage.py  log.py  pop.py  register.py  reproduce.py  reset.py  run.py  show.py  status.py
roar/core/: __init__.py  bootstrap.py  container.py  di.py  exceptions.py  registry.py  settings.py  validation.py
roar/core/dto/: __init__.py  registration.py
roar/core/interfaces/: __init__.py  cloud.py  command.py  config.py  logger.py  presenter.py  provenance.py  registration.py  repositories.py  reproduction.py  run.py  services.py  telemetry.py  upload.py  vcs.py
roar/core/models/: __init__.py  artifact.py  base.py  command.py  config.py  dag.py  glaas.py  job.py  lineage.py  provenance.py  run.py  session.py  telemetry.py  vcs.py
roar/db/: __init__.py  context.py  engine.py  models.py  schema.py  storage.py
roar/db/hashing/: __init__.py  registry.py  strategies.py
roar/db/repositories/: __init__.py  artifact.py  collection.py  hash_cache.py  job.py  session.py
roar/db/services/: __init__.py  hashing.py  job_recording.py  lineage.py  session.py
roar/filters/: __init__.py  files.py  omit.py
roar/plugins/: __init__.py
roar/plugins/cloud/: __init__.py  base.py
roar/plugins/telemetry/: __init__.py  base.py  wandb.py
roar/plugins/vcs/: __init__.py  base.py  git.py
roar/presenters/: __init__.py  console.py  dag_renderer.py  formatting.py  run_report.py
roar/services/: __init__.py  logging.py
roar/services/execution/: __init__.py  args.py  coordinator.py  dag_resolver.py  execution_service.py  signal_handler.py  tracer.py
roar/services/execution/inject/: __init__.py  sitecustomize.py
roar/services/execution/provenance/: __init__.py  assembler.py  build_pip_collector.py  build_tool_collector.py  data_loader.py  file_filter.py  package_collector.py  process_summarizer.py  runtime_collector.py  service.py
roar/services/lookup/: __init__.py  entity_lookup.py  step_parser.py
roar/services/registration/: __init__.py  artifact.py  coordinator.py  job.py  register_service.py  session.py
roar/services/reproduction/: __init__.py  environment_setup.py  pipeline_executor.py  service.py
roar/services/secrets/: __init__.py  filter_service.py
roar/services/upload/: __init__.py  lineage_collector.py  service.py
roar/services/vcs/: __init__.py  git_access.py
roar/utils/: __init__.py  cloud.py  git_url.py
scripts/: setup_test_user.py
tests/: conftest.py  test_config.py
tests/happy_path/: conftest.py  test_dag_command.py  test_run_dag_reference.py  test_run_diamond.py  test_run_ensemble.py  test_run_feature_eng.py  test_run_hyperparams.py  test_run_multi_model.py  test_run_options.py  test_run_simple_linear.py
tests/integration/: conftest.py  test_build_tool_detection.py  test_init_git_detection.py  test_reproduce_packages.py
tests/live_glaas/: __init__.py  test_full_pipeline_live.py  test_register_live.py  test_reproduce_live.py
tests/unit/: __init__.py  test_build_pip_collector.py  test_build_tool_collector.py  test_dag_renderer.py  test_environment_setup.py  test_git_url.py  test_large_payload_error.py  test_lineage_collector.py  test_pipeline_executor.py  test_register_service.py  test_reproduce_cli.py  test_reproduction_service_reuse.py  test_show_cli.py
tracer/: Cargo.toml
tracer/src/: main.rs
