[package]
name = "roar-tracer"
version = "0.1.0"
edition = "2021"
description = "ptrace-based syscall tracer for roar provenance tracking"

[dependencies]
nix = { version = "0.29", features = ["ptrace", "process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[[bin]]
name = "roar-tracer"
path = "src/main.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
too_many_arguments = "allow"
